fixed problems with text-align

--- a/src/components/HabiticaAvatar/HabiticaAvatar.module.scss
+++ b/src/components/HabiticaAvatar/HabiticaAvatar.module.scss
@@ -13,7 +13,7 @@
 .character-sprites {
   width: 90px;
   height: 90px;
-  display: inline-flex;
+  display: flex;
 }
 
 .current-pet {
